# src/app/routes/productRoute.ts
@@ -1,11 +1,13 @@
 import express from "express"
 import { productController } from "../controllers/products.js";
+import authMiddleware from "../middlewares/authMiddleware.js";
+import { authroleSeller } from "../middlewares/authroles.js";
 const router = express.Router();
 
-router.post('/create', productController.createProduct);
-router.get('/getall', productController.getAllProducts); //working
-router.get('/search', productController.getProductBySearch);
-router.get('/:id', productController.getProductById); //working
-router.put('/update/:id', productController.updateProduct);
-router.delete('/delete/:id', productController.deleteProduct);
+router.post('/createproduct',authMiddleware,authroleSeller, productController.createProduct);
+router.get('/getallproducts',authMiddleware,authroleSeller, productController.getAllProducts); 
+router.get('/searchproduct',authMiddleware,authroleSeller, productController.getProductBySearch);
+router.get('/:id',authMiddleware,authroleSeller, productController.getProductById); 
+router.put('/updateproduct/:id',authMiddleware,authroleSeller, productController.updateProduct);
+router.delete('/deleteproduct/:id',authMiddleware,authroleSeller, productController.deleteProduct);
 export const productRoute = router;
